# mcp-google-ads

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: generate_token.sh
src/: auth.rs  client.rs  config.rs  error.rs  gaql.rs  lib.rs  main.rs
src/safety/: audit.rs  guards.rs  mod.rs  preview.rs
src/tools/: accounts.rs  ad_groups_write.rs  ads.rs  ads_write.rs  assets.rs  audiences.rs  bidding.rs  budget.rs  campaigns.rs  campaigns_write.rs  confirm.rs  conversions.rs  entity_lifecycle.rs  extensions.rs  extensions_write.rs  geo.rs  keyword_planner.rs  keywords.rs  keywords_write.rs  mod.rs  pmax.rs  policy.rs  recommendations.rs  reporting.rs  scheduling.rs  write_tools_registration.txt
tests/: integration_test.rs
