[package]
name = "mcp-google-ads"
version = "0.2.0"
edition = "2021"
description = "MCP server for Google Ads — full campaign management with safety guardrails"
license = "MIT"
authors = ["François-Guillaume Ribreau <rust@fgribreau.com>"]
repository = "https://github.com/FGRibreau/mcp-google-ads"
homepage = "https://github.com/FGRibreau/mcp-google-ads"
readme = "README.md"
keywords = ["mcp", "google-ads", "advertising", "ai", "automation"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["dogfood-output/", "scripts/", "assets/", ".claude/", ".envrc"]

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
yup-oauth2 = "12"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
